--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.log
 sitemap.xml
 sitemap.xml.gz
+
+# Ignore WordPress Core Files
 wp-config.php
 wp-content/advanced-cache.php
 wp-content/backup-db/
@@ -11,8 +13,22 @@ wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
+wp-content/themes/twenty*
+wp-cron.php
+wp-includes/
+wp-links-opml.php
+wp-load.php
+wp-login.php
+wp-mail.php
+wp-settings.php
+wp-signup.php
+wp-trackback.php
+xmlrpc.php
 
-/readme.html
-/license.txt
+readme.html
 
+#CPI System file
+sys-common
+
+# Other System files
 # .htaccess
