--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ sitemap.xml
 sitemap.xml.gz
 
 # Ignore WordPress Core Files
-wp-config.php
+wp-activate.php
 wp-content/advanced-cache.php
 wp-content/backup-db/
 wp-content/backups/
@@ -25,7 +25,9 @@ wp-signup.php
 wp-trackback.php
 xmlrpc.php
 
-readme.html
+#Ignore Config File
+wp-config.php
+
 
 #CPI System file
 sys-common
