--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ wp-activate.php
 wp-content/advanced-cache.php
 wp-content/backup-db/
 wp-content/backups/
+wp-content/backwpup*
 wp-content/blogs.dir/
 wp-content/cache/
 wp-content/upgrade/
